--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -54,6 +54,7 @@
   --color-primary-set-color-2: #1e90ff;
   --color-primary-set-color-3: #20b5b6;
   --color-primary-set-color-4: #25bc98;
+  --color-primary-set-color-5: #00347a;
   --color-primary-gradient: linear-gradient(
     272.97deg,
     var(--color-primary-set-color-1),
@@ -61,7 +62,11 @@
     var(--color-primary-set-color-3) 79.28%,
     var(--color-primary-set-color-4) 95.45%
   );
+  --color-primary-set-color-6: #e7e8ec;
+  --color-primary-set-color-7: #fff;
+  --color-primary-set-color-8: #f2f4f7;
   --common-text-color: #1f1f22;
+  --secondary-text-color: #565b62;
 }
 
 @media (prefers-color-scheme: dark) {
