--- a/src/styles/landing.module.scss
+++ b/src/styles/landing.module.scss
@@ -20,7 +20,7 @@
   align-items: center;
 
   &::after {
-    background-color: var(--navigation-underline-color);
+    background-color: var(--color-primary-set-color-6);
     bottom: 0;
     content: "";
     height: 1px;
@@ -36,7 +36,7 @@
 
 .logo {
   padding: 0 15px;
-  color: #00347a;
+  color: var(--color-primary-set-color-5);
   font-size: 16px;
   font-weight: 600;
   text-transform: uppercase;
@@ -49,7 +49,7 @@
   padding: 0 15px;
 
   a {
-    color: #565b62;
+    color: var(--secondary-text-color);
     font-size: 14px;
     margin: 0 15px;
     padding: 20px 0;
@@ -72,7 +72,6 @@
 
 .banner {
   margin-top: 56px;
-  background-color: var(--banner-background-color);
   background-image: linear-gradient(
     1turn,
     rgb(242, 244, 247),
@@ -105,7 +104,7 @@
     font-size: 36px;
     line-height: 44px;
     font-weight: bold;
-    color: #1f1f22;
+    color: var(--common-text-color);
 
     & > span {
       & > span {
@@ -354,7 +353,7 @@
 .searchContent {
   padding: 36px;
   border-radius: 18px;
-  background: #f2f4f7;
+  background: var(--color-primary-set-color-8);
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -386,9 +385,9 @@
       line-height: 20px;
       outline: none;
       width: 100%;
-      border: #e7e8ec 1px solid;
+      border: var(--color-primary-set-color-6) 1px solid;
       border-radius: 12px;
-      background: #fff;
+      background: var(--color-primary-set-color-7);
     }
   }
 }
@@ -436,7 +435,7 @@
     margin-top: 20px;
     padding: 20px;
     border-radius: 12px;
-    background: #f2f4f7;
+    background: var(--color-primary-set-color-8);
 
     p {
       margin-top: 12px;
@@ -452,7 +451,7 @@
 
 .footer {
   margin-top: 140px;
-  background: #f2f4f7;
+  background: var(--color-primary-set-color-8);
 }
 
 .footerContent {
@@ -482,7 +481,7 @@
     p {
       font-size: 16px;
       line-height: 20px;
-      color: #565b62;
+      color: var(--secondary-text-color);
     }
 
     &:first-child {
