--- a/src/components/Check/check.module.scss
+++ b/src/components/Check/check.module.scss
@@ -1,11 +1,12 @@
+@use "../../styles/mixins.scss";
 @import "../../styles/mixins";
 
 .check {
-  margin: 0 auto;
-  max-width: 1140px;
-  padding: 0 15px;
-  width: 100%;
-  padding-top: 4rem;
+  padding: 70px 0 70px;
+
+  @media (max-width: 583px) {
+    padding: 50px 0 50px;
+  }
 }
 
 .checkContent {
@@ -16,9 +17,7 @@
   justify-content: center;
 
   h2 {
-    font-kerning: auto;
-    font-size: 36px;
-    font-weight: 700;
+    @include mixins.header3;
     height: auto;
     line-height: 44px;
     outline-color: var(--common-text-color);
@@ -48,8 +47,7 @@
         margin-top: 34px;
         margin-bottom: 12px;
 
-        font-size: 24px;
-        font-weight: 600;
+        @include mixins.header4;
         height: auto;
         line-height: 30px;
         text-align: center;
@@ -58,8 +56,7 @@
       }
 
       p {
-        font-size: 14px;
-        font-weight: 400;
+        @include mixins.noteHigh;
         height: auto;
         line-height: 19px;
         text-align: center;
@@ -70,7 +67,8 @@
 
 @media (max-width: 583px) {
   .check {
-    padding-top: 2rem;
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
   .checkContent ul {
     flex-direction: column;
