--- a/src/components/LandingNavigation/landing-navigation.module.scss
+++ b/src/components/LandingNavigation/landing-navigation.module.scss
@@ -1,9 +1,4 @@
-.container {
-  margin: 0 auto;
-  max-width: 1140px;
-  padding: 0 15px;
-  width: 100%;
-}
+@use "../../styles//mixins.scss";
 
 .navigation {
   position: fixed;
@@ -42,8 +37,7 @@
 .logo {
   padding: 0 15px;
   color: var(--color-primary-set-color-5);
-  font-size: 16px;
-  font-weight: 600;
+  @include mixins.secondary;
   text-transform: uppercase;
 }
 
@@ -56,7 +50,7 @@
   li {
     list-style: none;
     color: var(--secondary-text-color);
-    font-size: 14px;
+    @include mixins.noteHigh;
     margin: 0 15px;
     padding: 20px 0;
     position: relative;
