--- a/src/components/Search/search.module.scss
+++ b/src/components/Search/search.module.scss
@@ -1,11 +1,10 @@
+@use "../../styles/mixins.scss";
+
 .search {
-  margin: 0 auto;
-  max-width: 1140px;
-  width: 100%;
-  padding: 70px 15px;
+  padding: 70px 0 70px;
 
   @media (max-width: 583px) {
-    padding: 50px 15px;
+    padding: 50px 0 50px;
   }
 }
 
@@ -18,10 +17,13 @@
   align-items: flex-start;
   width: 100%;
 
+  @media (max-width: 583px) {
+    align-items: center;
+  }
+
   h2 {
     margin: 44px 0 24px;
-    font-size: 36px;
-    font-weight: 700;
+    @include mixins.header3;
     line-height: 44px;
   }
 
@@ -31,11 +33,19 @@
     justify-content: space-between;
     width: 100%;
 
+    @media (max-width: 583px) {
+      flex-direction: column;
+      gap: 1rem;
+
+      .searchButton {
+        width: 100%;
+      }
+    }
+
     input {
       margin-right: 12px;
       padding: 24px 30px;
-      font-size: 18px;
-      line-height: 20px;
+      @include mixins.secondaryHighTwo;
       width: 100%;
       border: 1px solid var(--color-primary-set-color-6);
       border-radius: 12px;
