--- a/src/components/Work/work.module.scss
+++ b/src/components/Work/work.module.scss
@@ -1,10 +1,11 @@
 @import "../../styles/mixins";
 
 .work {
-  margin: 0 auto;
-  max-width: 1140px;
-  width: 100%;
-  padding: 70px 15px;
+  padding: 70px 0 70px;
+
+  @media (max-width: 583px) {
+    padding: 50px 0 50px;
+  }
 }
 
 .workContent {
@@ -72,11 +73,6 @@
   img {
     max-width: 100%;
     margin-top: -60px;
-  }
-  @media (max-width: 583px) {
-    order: 2;
-    margin-left: 0;
-    margin-top: 20px;
   }
 }
 
