--- a/src/components/ThemeColorPicker/picker.module.scss
+++ b/src/components/ThemeColorPicker/picker.module.scss
@@ -1,3 +1,5 @@
+@use "../../styles/mixins.scss";
+
 .themeColorPicker {
   position: fixed;
   top: 2px;
@@ -12,13 +14,12 @@
   cursor: pointer;
   opacity: 0.33;
   animation: attract 10s infinite;
-  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1),
-  2px 2px 8px rgba(0, 0, 0, 0.075),
-  3px 3px 16px rgba(0, 0, 0, 0.05);
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1), 2px 2px 8px rgba(0, 0, 0, 0.075),
+    3px 3px 16px rgba(0, 0, 0, 0.05);
 
   summary {
     user-select: none;
-    font-size: 14px;
+    @include mixins.noteHigh;
   }
 
   &:global.dirty {
@@ -26,7 +27,8 @@
     opacity: 0.15;
   }
 
-  &:hover, &[open] {
+  &:hover,
+  &[open] {
     opacity: 1;
     animation: appear 200ms ease-out;
   }
@@ -57,7 +59,7 @@
       }
 
       button {
-        font-size: 8px;
+        @include mixins.button;
         margin-top: 4px;
         padding: 2px 4px;
         background: #f1f1f1;
@@ -126,7 +128,7 @@
       opacity: 0.33;
       transform: translateX(0) translateY(0);
     }
-  };
+  }
 
   @keyframes appear {
     0% {
@@ -135,6 +137,5 @@
     100% {
       opacity: 1;
     }
-
   }
 }
