--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,3 +1,5 @@
+$font-family: "SB Sans Text";
+
 @mixin primary-text {
   color: rgba(0, 0, 0, 0);
   background-clip: text;
@@ -8,4 +10,89 @@
   background-position-y: 0;
   background-repeat: repeat;
   background-size: auto;
+}
+@mixin base-header(
+  $font-weight,
+  $font-size,
+  $line-height,
+  $letter-spacing: null
+) {
+  font-family: $font-family;
+  font-style: normal;
+  font-weight: $font-weight;
+  font-size: $font-size;
+  line-height: $line-height;
+
+  @if $letter-spacing {
+    letter-spacing: $letter-spacing;
+  }
+}
+
+@mixin header1 {
+  @include base-header(700, 60px, 72px);
+}
+
+@mixin header2 {
+  @include base-header(700, 48px, 58px);
+}
+
+@mixin header3 {
+  @include base-header(700, 36px, 44px);
+}
+
+@mixin header4 {
+  @include base-header(600, 24px, 30px, 0.005em);
+}
+
+@mixin header5 {
+  @include base-header(700, 20px, 24px, 0.005em);
+}
+
+@mixin header6 {
+  @include base-header(700, 16px, 20px, 0.01em);
+}
+
+@mixin base-body($font-weight, $font-size, $line-height, $letter-spacing) {
+  font-family: $font-family;
+  font-style: normal;
+  font-weight: $font-weight;
+  font-size: $font-size;
+  line-height: $line-height;
+  letter-spacing: $letter-spacing;
+}
+
+@mixin body {
+  @include base-body(500, 20px, 24px, 0.005em);
+}
+
+@mixin bodyHigh {
+  @include base-body(500, 20px, 36px, 0.005em);
+}
+
+@mixin secondary {
+  @include base-body(600, 16px, 20px, 0.01em);
+}
+
+@mixin secondaryHigh {
+  @include base-body(500, 16px, 20px, 0.01em);
+}
+
+@mixin secondaryHighTwo {
+  @include base-body(500, 18px, 20px, 0.01em);
+}
+
+@mixin noteHigh {
+  @include base-body(400, 14px, 16px, 0.02em);
+}
+
+@mixin note {
+  @include base-body(500, 12px, 16px, 0.02em);
+}
+
+@mixin noteAccent {
+  @include base-body(700, 12px, 16px, 0.02em);
+}
+
+@mixin button {
+  @include base-body(400, 8px, 16px, 0.02em);
 }
