refactor: replace media queries with mixins for-phone-only and for-desktop-up in Banner styles

--- a/src/components/Banner/banner.module.scss
+++ b/src/components/Banner/banner.module.scss
@@ -69,7 +69,7 @@
   }
 }
 
-@media (max-width: 583px) {
+@include for-phone-only {
   .bannerMedia {
     display: none;
   }
@@ -89,7 +89,7 @@
   }
 }
 
-@media (min-width: 901px) {
+@include for-desktop-up {
   .bannerMedia {
     display: block;
   }
