--- a/src/components/Check/check.module.scss
+++ b/src/components/Check/check.module.scss
@@ -4,7 +4,7 @@
 .check {
   padding: 70px 0 70px;
 
-  @media (max-width: 583px) {
+  @include for-phone-only {
     padding: 50px 0 50px;
   }
 }
@@ -65,7 +65,7 @@
   }
 }
 
-@media (max-width: 583px) {
+@include for-phone-only {
   .check {
     padding-top: 50px;
     padding-bottom: 50px;
