--- a/src/components/Faq/faq.module.scss
+++ b/src/components/Faq/faq.module.scss
@@ -1,9 +1,10 @@
 @use "@/styles/mixins.scss";
+@import "../../styles/mixins";
 
 .faq {
   padding: 70px 0 70px;
 
-  @media (max-width: 583px) {
+  @include for-phone-only {
     padding: 50px 0 50px;
   }
 }
