--- a/src/components/LandingNavigation/landing-navigation.module.scss
+++ b/src/components/LandingNavigation/landing-navigation.module.scss
@@ -1,4 +1,5 @@
 @use "../../styles//mixins.scss";
+@import "../../styles/mixins.scss";
 
 .navigation {
   position: fixed;
@@ -63,7 +64,7 @@
   }
 }
 
-@media (max-width: 583px) {
+@include for-phone-only {
   .navigationContent {
     padding-top: 15px;
     flex-direction: column;
