--- a/src/components/Search/search.module.scss
+++ b/src/components/Search/search.module.scss
@@ -1,9 +1,10 @@
 @use "../../styles/mixins.scss";
+@import "../../styles/mixins.scss";
 
 .search {
   padding: 70px 0 70px;
 
-  @media (max-width: 583px) {
+  @include for-phone-only {
     padding: 50px 0 50px;
   }
 }
@@ -17,7 +18,7 @@
   align-items: flex-start;
   width: 100%;
 
-  @media (max-width: 583px) {
+  @include for-phone-only {
     align-items: center;
   }
 
@@ -33,7 +34,7 @@
     justify-content: space-between;
     width: 100%;
 
-    @media (max-width: 583px) {
+    @include for-phone-only {
       flex-direction: column;
       gap: 1rem;
 
