--- a/src/components/Sources/sources.module.scss
+++ b/src/components/Sources/sources.module.scss
@@ -1,9 +1,10 @@
 @use "../../styles/mixins.scss";
+@import "../../styles/mixins.scss";
 
 .sources {
   padding: 70px 0 70px;
 
-  @media (max-width: 583px) {
+  @include for-phone-only {
     padding: 50px 0 50px;
   }
 }
@@ -57,7 +58,7 @@
   }
 }
 
-@media (max-width: 583px) {
+@include for-phone-only {
   .sourcesContent ul {
     flex-direction: column;
     margin-top: 0;
