--- a/src/components/Work/work.module.scss
+++ b/src/components/Work/work.module.scss
@@ -1,9 +1,10 @@
 @import "../../styles/mixins";
+@import "../../styles/mixins.scss";
 
 .work {
   padding: 70px 0 70px;
 
-  @media (max-width: 583px) {
+  @include for-phone-only {
     padding: 50px 0 50px;
   }
 }
@@ -76,7 +77,7 @@
   }
 }
 
-@media (max-width: 583px) {
+@include for-phone-only {
   .work {
     padding-top: 50px;
     padding-bottom: 50px;
