refactor: rename color variables and update references across the application

--- a/src/components/Accordion/accordion.module.scss
+++ b/src/components/Accordion/accordion.module.scss
@@ -3,7 +3,7 @@
 .accordion {
   padding: 20px;
   border-radius: 12px;
-  background: var(--color-primary-set-color-8);
+  background: var(--color-secondary-set-3);
 
   p {
     margin-top: 12px;
