--- a/src/components/LandingNavigation/landing-navigation.module.scss
+++ b/src/components/LandingNavigation/landing-navigation.module.scss
@@ -7,7 +7,7 @@
   top: 0;
   left: 0;
   right: 0;
-  background: var(--color-primary-set-color-7);
+  background: var(--color-secondary-set-2);
   z-index: 1000;
 }
 
@@ -24,7 +24,7 @@
   align-items: center;
 
   &::after {
-    background-color: var(--color-primary-set-color-6);
+    background-color: var(--color-secondary-set-1);
     bottom: 0;
     content: "";
     height: 1px;
@@ -37,7 +37,7 @@
 
 .logo {
   padding: 0 15px;
-  color: var(--color-primary-set-color-5);
+  color: var(--accent-color);
   @include mixins.secondary;
   text-transform: uppercase;
 }
