--- a/src/components/Search/search.module.scss
+++ b/src/components/Search/search.module.scss
@@ -12,7 +12,7 @@
 .searchContent {
   padding: 36px;
   border-radius: 18px;
-  background: var(--color-primary-set-color-8);
+  background: var(--color-secondary-set-3);
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -48,9 +48,9 @@
       padding: 24px 30px;
       @include mixins.secondaryHighTwo;
       width: 100%;
-      border: 1px solid var(--color-primary-set-color-6);
+      border: 1px solid var(--color-secondary-set-1);
       border-radius: 12px;
-      background: var(--color-primary-set-color-7);
+      background: var(--color-secondary-set-2);
       outline: none;
     }
   }
