--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -50,21 +50,21 @@
 }
 
 :root {
-  --color-primary-set-color-1: #2870f6;
-  --color-primary-set-color-2: #1e90ff;
-  --color-primary-set-color-3: #20b5b6;
-  --color-primary-set-color-4: #25bc98;
-  --color-primary-set-color-5: #00347a;
+  --color-primary-set-1: #2870f6;
+  --color-primary-set-2: #1e90ff;
+  --color-primary-set-3: #20b5b6;
+  --color-primary-set-4: #25bc98;
   --color-primary-gradient: linear-gradient(
     272.97deg,
-    var(--color-primary-set-color-1),
-    var(--color-primary-set-color-2) 58.6%,
-    var(--color-primary-set-color-3) 79.28%,
-    var(--color-primary-set-color-4) 95.45%
+    var(--color-primary-set-1),
+    var(--color-primary-set-2) 58.6%,
+    var(--color-primary-set-3) 79.28%,
+    var(--color-primary-set-4) 95.45%
   );
-  --color-primary-set-color-6: #e7e8ec;
-  --color-primary-set-color-7: #fff;
-  --color-primary-set-color-8: #f2f4f7;
+  --accent-color: #00347a;
+  --color-secondary-set-1: #e7e8ec;
+  --color-secondary-set-2: #fff;
+  --color-secondary-set-3: #f2f4f7;
   --common-text-color: #1f1f22;
   --secondary-text-color: #565b62;
 }
