feat: add link to logo for navigating to the homepage

--- a/src/components/LandingNavigation/landing-navigation.module.scss
+++ b/src/components/LandingNavigation/landing-navigation.module.scss
@@ -40,6 +40,11 @@
   color: var(--accent-color);
   @include mixins.secondary;
   text-transform: uppercase;
+
+  a {
+    text-decoration: none;
+    cursor: pointer;
+  }
 }
 
 .navLinks {
