--- a/src/components/ReportContent/report-content.module.scss
+++ b/src/components/ReportContent/report-content.module.scss
@@ -1,102 +1,12 @@
+@use "../../styles/mixins.scss";
+@import "../../styles/mixins";
+
 .reportContent {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: flex-start;
+  flex-direction: column;
+  padding: 16px;
 
-  h2 {
-    margin-bottom: 46px;
-    font-size: 36px;
-    font-weight: 600;
-    height: auto;
-    line-height: 42px;
-  }
-
-  & > div {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-
-    &:first-of-type {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      width: 100%;
-
-      & > div {
-        margin: 0;
-        width: 48%;
-
-        &:first-of-type {
-          & > div {
-            margin-bottom: 36px;
-
-            h3 {
-              margin-bottom: 24px;
-              font-size: 24px;
-              font-weight: 600;
-              height: auto;
-              line-height: 30px;
-            }
-          }
-
-          ul {
-            li {
-              font-size: 16px;
-              line-height: 20px;
-              color: #565b62;
-              list-style: none;
-              margin: 4px 0;
-
-              span {
-                font-weight: 600;
-              }
-            }
-          }
-        }
-
-        &:last-of-type {
-          display: flex;
-          justify-content: flex-end;
-
-          img {
-            max-height: 600px;
-            margin-left: auto;
-            border-radius: 12px;
-            overflow: hidden;
-          }
-        }
-      }
-    }
-
-    &:not(:first-of-type) {
-      margin-top: 76px;
-    }
-
-    &:nth-of-type(2) {
-      width: 100%;
-
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      justify-content: space-between;
-
-      h4 {
-        margin-bottom: 24px;
-        font-size: 36px;
-        font-weight: 600;
-        height: auto;
-        line-height: 42px;
-      }
-
-      p {
-        font-size: 16px;
-        line-height: 20px;
-        color: #565b62;
-      }
-    }
+  @include for-phone-only {
+    margin-top: 0;
   }
 }
