--- a/src/components/ErrorComponent/error.module.scss
+++ b/src/components/ErrorComponent/error.module.scss
@@ -1,10 +1,13 @@
 @use "../../styles/mixins.scss";
 
 .error {
-  padding: 16px;
-  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   text-align: center;
-  margin-top: 56px;
+  padding: 16px;
+
+  align-items: center;
 
   h2 {
     @include mixins.secondary;
