--- a/src/components/Loader/loader.module.scss
+++ b/src/components/Loader/loader.module.scss
@@ -1,21 +1,17 @@
 @use "../../styles//mixins.scss";
 @import "../../styles//mixins.scss";
 
-.loading {
+.loader {
+  position: relative;
+  height: 140px;
+  width: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 80vh;
-  height: 100%;
   flex-direction: column;
-
-  p {
-    padding-top: 15rem;
-    @include mixins.header6;
-  }
 }
 
-.loader {
+.pin {
   transform: perspective(40px) rotateX(20deg) rotateZ(-45deg);
   transform-origin: 50% 50%;
   border-radius: 50% 50% 50% 0;
@@ -27,12 +23,10 @@
   left: 50%;
   top: 45%;
   margin: -2.2em 0 0 -1.3em;
-  -webkit-box-shadow: -1px 1px 4px rgba(0, 0, 0, 0.25);
-  -moz-box-shadow: -1px 1px 4px rgba(0, 0, 0, 0.25);
   box-shadow: -1px 1px 4px rgba(0, 0, 0, 0.25);
 }
 
-.loader:after {
+.pin:after {
   content: "";
   width: 1em;
   height: 1em;
@@ -49,10 +43,6 @@
   height: 3em;
   width: 3em;
   border-radius: 50%;
-  -webkit-transform: translateX(-50%);
-  -o-transform: translateX(-50%);
-  -moz-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
   transform: translateX(-50%);
   z-index: -1;
 }
@@ -68,24 +58,20 @@
   background-color: transparent;
   border-radius: 50%;
   background: var(--color-primary-gradient);
-  -webkit-animation: active 2s infinite linear;
-  -moz-animation: active 2s infinite linear;
   animation: active 2s infinite linear;
 }
 
 .beacon:after {
-  -moz-animation-delay: 1s;
-  -webkit-animation-delay: 1s;
   animation-delay: 1s;
 }
 
 @-webkit-keyframes active {
   0% {
-    -webkit-transform: scale(0.1);
+    transform: scale(0.1);
     opacity: 1;
   }
   100% {
-    -webkit-transform: scale(2.5);
+    transform: scale(2.5);
     opacity: 0;
   }
 }
