--- a/src/styles/report.module.scss
+++ b/src/styles/report.module.scss
@@ -1,3 +1,28 @@
+@use "../styles/mixins.scss";
+
 .report {
   margin: 70px 0;
+  min-height: 80vh;
+  height: 100%;
+}
+
+.reportContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+}
+
+.loaderContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 80vh;
+
+  p {
+    @include mixins.secondary;
+    margin-top: 20px;
+    text-align: center;
+  }
 }
